--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,6 @@ body {
 .bg-dark {
   background-color: #232f3e!important;
 }
-/* Scroll Bar */
-
 ::-webkit-scrollbar-track {
   background-color: #f5f5f5;
 }
@@ -51,7 +49,7 @@ nav {
 
 #login_btn,
 #view_btn {
-  background-color: #febd69;
+  background-color: #febd69 !important;
   padding: 0.4rem 1.8rem;
   font-family: calibri;
 }
