--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   min-height: 80vh;
 }
 .bg-dark {
-  background-color: #232f3e!important;
+  background-color: #485227!important;
 }
 ::-webkit-scrollbar-track {
   background-color: #f5f5f5;
@@ -33,7 +33,7 @@ body {
   border: 1px solid red !important;
 }
 nav {
-  background-color: #232f3e;
+  background-color: #485227;
   padding: 1rem 1rem;
 }
 
@@ -503,7 +503,7 @@ footer {
 #sidebar {
   min-width: 100%;
   max-width: 100%;
-  background: #232f3e;
+  background: #485227;
   color: #fff;
   transition: all 0.3s;
 }
@@ -513,11 +513,11 @@ footer {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #232f3e;
+  background: #485227;
 }
 #sidebar ul.components {
   padding: 5px 0px;
-  border-bottom: 1px solid #232f3e;
+  border-bottom: 1px solid #485227;
 }
 
 #sidebar ul li a {
@@ -528,7 +528,7 @@ footer {
   text-decoration: none;
 }
 #sidebar ul li a:hover {
-  color: #232f3e;
+  color: #485227;
   background: #fff;
 }
 .dropdown-menu {
@@ -543,7 +543,7 @@ footer {
 #sidebar ul li.active > a,
 a[aria-expanded="true"] {
   color: #fff;
-  background: #232f3e;
+  background: #485227;
 }
 a[data-toggle="collapse"] {
   position: relative;
@@ -552,7 +552,7 @@ a[data-toggle="collapse"] {
 ul ul a {
   font-size: 1rem !important;
   padding-left: 30px !important;
-  background: #232f3e;
+  background: #485227;
 }
 
 ul.CTAs {
